--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           >
             RR Enterprice
           </h1>
-          <p class="inter text-white text-[10px] md:text-xs lg:text-sm ">
+          <p class="inter text-white text-[10px] md:text-xs lg:text-xl">
             Yes, you can run unit tests and view the results directly within the
             app. The integrated testing features allow for a streamlined .
           </p>
@@ -97,30 +97,116 @@
           </button>
         </div>
         <!-- banner review -->
-        <div class=" w-full md:w-[90%] lg:w-[75%] mx-auto flex justify-between items-center absolute bottom-[0] left-[50%] transform translate-x-[-50%] translate-y-1/2 hidden md:flex lg: flex  ">
-            <div class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%] ">
-              <div class="flex items-center">
-                <img src="images/people.png" alt="" />
-                <div><h1 class="font-extrabold inter  lg:text-4xl md:2xl  ">500k</h1>
-                <p>Registered users</p></div>
-              </div>
-            </div>
-            <div class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%] ">
-              <div class="flex items-center">
-                <img src="images/people.png" alt="" />
-                <div><h1>500k</h1>
-                <p>Registered users</p></div>
-              </div>
-            </div>
-            <div class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%] ">
-              <div class="flex items-center">
-                <img src="images/people.png" alt="" />
-                <div><h1>500k</h1>
-                <p>Registered users</p></div>
+        <div
+          class="w-full md:w-[90%] lg:w-[75%] mx-auto flex justify-between items-center absolute bottom-[0] left-[50%] transform translate-x-[-50%] translate-y-1/2 hidden md:flex lg: flex"
+        >
+          <div
+            class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%]"
+          >
+            <div class="flex items-center">
+              <img src="images/people.png" alt="" />
+              <div>
+                <h1 class="font-extrabold inter lg:text-4xl md:text-xl text-xl">
+                  500k
+                </h1>
+                <p class="inter font-normal text-sm text-[#03071260]">
+                  Registered users
+                </p>
               </div>
             </div>
           </div>
+          <div
+            class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%]"
+          >
+            <div class="flex items-center">
+              <img src="images/ticket-cupon.png" alt="" />
+              <div>
+                <h1 class="font-extrabold inter lg:text-4xl md:text-xl text-xl">
+                  1.7 lacks
+                </h1>
+                <p class="inter font-normal text-sm text-[#03071260]">
+                  Tickets sold
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="bg-[#FFFFFF] rounded-3xl shadow-lg border-b-4 border-[#1DD100] lg:p-8 md:p-4 p-2 w-[30%]"
+          >
+            <div class="flex items-center">
+              <img src="images/people.png" alt="" />
+              <div>
+                <h1 class="font-extrabold inter lg:text-4xl md:text-xl text-xl">
+                  80k+
+                </h1>
+                <p class="inter font-normal text-sm text-[#03071260]">
+                  Rental partners
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- best offer -->
+
+      <div class="lg:mt-28 md:mt-28 mt-[-50px]">
+        <h1 class="raleway font-bold text-5xl text-center my-10">Best offers for you</h1>
+        <div
+          class="flex justify-around gap-6 flex-col md:flex-row lg: flex-row"
+        >
+          <!-- copun 1 -->
+          <div class="bg-[#FFBF0F] flex rounded-2xl justify-around flex-1">
+            <div class="p-5 flex flex-col justify-center items-start">
+              <h1 class="inter text-3xl font-semibold text-[#030712]">
+                15% OFF
+              </h1>
+              <h2 class="inter text-xl font-semibold text-[#030712]">
+                on your next purchase
+              </h2>
+              <h4 class="inter text-[#03071240] font-normal">
+                use by January 2024
+              </h4>
+            </div>
+            <div class=""><img src="images/cupon-devider.png" alt="" /></div>
+            <div class="flex flex-col justify-center items-center pr-5">
+              <span class="raleway text-[#030712] text-3xl font-semibold"
+                >NEW15</span
+              >
+              <p class="inter text-[#03071240] text-xl">Coupon Code</p>
+            </div>
+          </div>
+          <!-- copun 2 -->
+          <div class="bg-[#F78C9C] flex rounded-2xl justify-around flex-1">
+            <div class="p-5 flex flex-col justify-center items-start">
+              <h1 class="inter text-3xl font-semibold text-[#030712]">
+                20% OFF
+              </h1>
+              <h2 class="inter text-xl font-semibold text-[#030712]">
+                on your next purchase
+              </h2>
+              <h4 class="inter text-[#03071240] font-normal">
+                use by January 2024
+              </h4>
+            </div>
+            <div class=""><img src="images/cupon-devider.png" alt="" /></div>
+            <div class="flex flex-col justify-center items-center pr-5">
+              <span class="raleway text-[#030712] text-3xl font-semibold"
+                >Couple 20
+              </span>
+              <p class="inter text-[#03071240] text-xl">Coupon Code</p>
+            </div>
+          </div>
+        </div>
+        <!-- offer button -->
+        <div class=" flex items-center justify-center my-10">
+            <button class="btn text-[#1DD100] bg-[#ffff] border border-[#1DD10080] "> See All offer</button>
+        </div>
+      </div>
+    </section>
+    <!-- program section -->
+    <section class="container mx-auto bg-[#F7F8F8] border-t-4 border-[#1DD100] min-h-16 rounded-t-full">
+        <h1>RR Enterprice</h1>
+
     </section>
   </body>
   <script src="code.js/code.js"></script>
