--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       </div>
       <!-- bus info  -->
       <div class="container mx-auto bg-[#ffff] flex justify-between flex-col lg:flex-row md:flex-row">
-        <div class="w-[70%]">
+        <div class=" w-full md:w-[70%] lg:w-[70%]">
           <div class="flex justify-between p-10">
             <div class="flex items-center gap-3">
               <div><img src="images/bus-logo.png" alt="" /></div>
@@ -267,7 +267,7 @@
         <div class="hidden  lg:flex md:hidden">
           <img class="h-full" src="images/info-devider.png" alt="">
         </div>
-        <div class="flex flex-col justify-center items-center w-[30%]">
+        <div class="flex flex-col justify-center items-center w-full md:w-[30%] lg:w-[30%]">
           <h1><img src="images/fare.png" alt="" /></h1>
           <h1>550 Taka</h1>
           <h4>Per Seat</h4>
