--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@
         </p>
       </div>
       <!-- bus info  -->
-      <div class="container mx-auto bg-[#ffff] flex justify-between flex-col lg:flex-row md:flex-row">
-        <div class=" w-full md:w-[70%] lg:w-[70%]">
+      <div
+        class="container mx-auto bg-[#ffff] flex justify-between flex-col lg:flex-row md:flex-row rounded-3xl"
+      >
+        <div class="w-full md:w-[70%] lg:w-[70%]">
           <div class="flex justify-between p-10">
             <div class="flex items-center gap-3">
               <div><img src="images/bus-logo.png" alt="" /></div>
@@ -237,22 +239,28 @@
             <div class="bg-[#1DD10015] p-4 flex gap-2 rounded-xl w-[200px]">
               <img src="images/seat-green-filled.png" alt="" />
               <h4 class="text-[#1DD100] inter font-semibold">
-                <span>40</span>
+                <span id="a-seat">40</span>
                 <h4 class="text-[#1DD100] inter font-semibold">Seats left</h4>
               </h4>
             </div>
           </div>
-          <div class="bg-[#F7F8F8] p-5 m-10 space-y-6">
-            <div class="flex justify-between">
-              <h1>Route</h1>
-              <h1>Dhaka - Sylhet</h1>
+          <div class="bg-[#F7F8F8] p-5 m-10 space-y-6 rounded-xl">
+            <div
+              class="flex justify-between font-bold border-b-4 border-dotted"
+            >
+              <h1 class="text-[#03071260] mb-3">Route</h1>
+              <h1 class="text-[#030712] font-bold">Dhaka - Sylhet</h1>
             </div>
-            <div class="flex justify-between">
-              <h1>Departure Time</h1>
-              <h1>9:00 PM</h1>
+            <div
+              class="flex justify-between border-b-4 border-dotted font-bold"
+            >
+              <h1 class="text-[#03071260] mb-3">Departure Time</h1>
+              <h1 class="text-[#030712] font-bold">9:00 PM</h1>
             </div>
-            <div class="flex justify-between flex-col md:flex-row lg:flex-row gap-5">
-              <div class="bg-[#03071260] p-4 rounded-lg ">
+            <div
+              class="flex justify-between flex-col md:flex-row lg:flex-row gap-5"
+            >
+              <div class="bg-[#03071260] p-4 rounded-lg">
                 <h1>Boarding Point - Laxmipur</h1>
               </div>
               <div class="bg-[#03071260] p-4 rounded-lg">
@@ -264,15 +272,176 @@
             </div>
           </div>
         </div>
-        <div class="hidden  lg:flex md:hidden">
-          <img class="h-full" src="images/info-devider.png" alt="">
+        <div class="hidden lg:flex md:flex">
+          <img class="h-full" src="images/info-devider.png" alt="" />
         </div>
-        <div class="flex flex-col justify-center items-center w-full md:w-[30%] lg:w-[30%]">
+        <div
+          class="flex flex-col justify-center items-center w-full md:w-[30%] lg:w-[30%]"
+        >
           <h1><img src="images/fare.png" alt="" /></h1>
           <h1>550 Taka</h1>
           <h4>Per Seat</h4>
         </div>
-        
+      </div>
+      <!-- seat info -->
+      <div
+        class="container mx-auto mt-10 bg-[#ffff] flex flex-col lg:flex-row md:flex-row gap-10 p-10 rounded-3xl"
+      >
+        <div
+          class="lg: w-[70%] w-full md:w-[70%] pr-16 md:border-r-4 lg:border-r-4 border-dotted"
+        >
+          <div>
+            <h1>Select Your Seat</h1>
+            <div class="flex justify-between">
+              <div class="flex">
+                <img src="images/seat-gray.png" alt="" />
+                <p>Available</p>
+              </div>
+              <div class="flex">
+                <img src="images/seat-green-filled.png" alt="" />
+                <p>Selected</p>
+              </div>
+            </div>
+            <p><img src="images/Vector.png" alt="" /></p>
+          </div>
+          <div class="flex gap-10 space-x-14 justify-between">
+            <div class="grid grid-cols-3 gap-10">
+              <p class="p-4">A</p>
+              <button class="btn   button">A1</button>
+              <button class="btn  button">A2</button>
+              <p class="p-4">B</p>
+              <button class="btn  button">B1</button>
+              <button class="btn  button">B2</button>
+              <p class="p-4">C</p>
+              <button class="btn  button">C1</button>
+              <button class="btn  button">C2</button>
+              <p class="p-4">D</p>
+              <button class="btn  button">D1</button>
+              <button class="btn button">D2</button>
+              <p class="p-4">E</p>
+              <button class="btn button">E1</button>
+              <button class="btn  button">E2</button>
+              <p class="p-4">F</p>
+              <button class="btn  button">F1</button>
+              <button class="btn button">F2</button>
+              <p class="p-4">G</p>
+              <button class="btn button">G1</button>
+              <button class="btn button">G2</button>
+              <p class="p-4">H</p>
+              <button class="btn button">H1</button>
+              <button class="btn  button">H2</button>
+              <p class="p-4">I</p>
+              <button class="btn  button">I1</button>
+              <button class="btn  button">I2</button>
+              <p class="p-4">J</p>
+              <button class="btn  button">J1</button>
+              <button class="btn  button">J2</button>
+            </div>
+            <div class="grid grid-cols-2 gap-10">
+              <button class="btn button">A3</button>
+              <button class="btn button">A4</button>
+              <button class="btn button">B3</button>
+              <button class="btn button">B4</button>
+              <button class="btn button">C3</button>
+              <button class="btn button">C4</button>
+              <button class="btn button">D3</button>
+              <button class="btn button">D4</button>
+              <button class="btn button">E3</button>
+              <button class="btn button">E4</button>
+              <button class="btn button">F3</button>
+              <button class="btn button">F4</button>
+              <button class="btn button">G3</button>
+              <button class="btn button">G4</button>
+              <button class="btn button">H3</button>
+              <button class="btn button">H4</button>
+              <button class="btn button">I3</button>
+              <button class="btn button">I4</button>
+              <button class="btn button">J3</button>
+              <button class="btn button">J4</button>
+            </div>
+          </div>
+        </div>
+        <div class="lg:w-[50%] md:w-[50%] w-full">
+          <h1>Select Your Seat</h1>
+
+          <!-- table -->
+          <div class="bg-[#F7F8F8] w-full w-[100%] p-6 rounded-3xl">
+            <div class="overflow-x-auto">
+              <table class="table">
+                <!-- head -->
+                <thead>
+                  <tr>
+                    <th>
+                      Seat
+                      <span class="bg-[#1DD100] p-2 rounded-3xl text-white"
+                        id="booking-seat" >0</span
+                      >
+                    </th>
+                    <th>Class</th>
+                    <th>Price</th>
+                  </tr>
+                </thead>
+                <tbody id="details"></tbody>
+                <tbody class="border border-t-4">
+                  <tr>
+                    <th>Total Price</th>
+                    <th></th>
+                    <th>BDT <span id="Total">0</span></th>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="bg-white flex p-2 my-2 rounded-2xl">
+                <input
+                  class="w-full border-none px-3"
+                  type="text"
+                  placeholder="Have any copupon?"
+                />
+                <button class="btn bg-[#1DD100]">Apply</button>
+              </div>
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <th>Grand Total</th>
+                    <th></th>
+                    <th>BDT <span id="G-Total">0</span></th>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="my-5 space-y-4">
+            <p>Passenger Name*</p>
+            <input
+              class="w-full p-4 shadow-md rounded-2xl"
+              type="text"
+              name=""
+              id=""
+              placeholder="enter your name"
+            />
+            <p>Phone Number*</p>
+            <input
+              class="w-full p-4 shadow-md rounded-2xl"
+              type="number"
+              name=""
+              id=""
+              placeholder="Enter your phone number"
+            />
+            <p>Email ID</p>
+            <input
+              class="w-full p-4 shadow-md rounded-2xl"
+              type="text"
+              name=""
+              id=""
+              placeholder="Enter your email id"
+            />
+
+            <button class="btn bg-[#1DD100] w-full">Next</button>
+            <div class="flex justify-between">
+              <a class="underline" href="">Terms and Conditions</a>
+              <a class="underline" href="">Cancellation Policy</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
