--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             Yes, you can run unit tests and view the results directly within the
             app. The integrated testing features allow for a streamlined .
           </p>
-          <button
+          <button onclick="goToTicketSection()"
             class="btn text-black font-bold bg-[#1dd100] raleway border-none"
           >
             Buy Tickets
@@ -284,7 +284,7 @@
         </div>
       </div>
       <!-- seat info -->
-      <div
+      <div id="go-to-seat"
         class="container mx-auto mt-10 bg-[#ffff] flex flex-col lg:flex-row md:flex-row gap-10 p-10 rounded-3xl"
       >
         <div
@@ -365,7 +365,7 @@
           <h1>Select Your Seat</h1>
 
           <!-- table -->
-          <div class="bg-[#F7F8F8] w-full  p-6 rounded-3xl">
+          <div class="bg-[#F7F8F8] w-full p-6 rounded-3xl">
             <div class="overflow-x-auto">
               <table class="table">
                 <!-- head -->
@@ -403,8 +403,8 @@
                   Apply
                 </button>
               </div>
-              <div class="overflow-x-auto w-full ">
-                <table class="table ">
+              <div class="overflow-x-auto w-full">
+                <table class="table">
                   <tbody>
                     <tr>
                       <th>Grand Total</th>
@@ -430,19 +430,26 @@
               class="w-full p-4 shadow-md rounded-2xl"
               type="number"
               name=""
-              id=""
+              id="PhoneNumber"
               placeholder="Enter your phone number"
             />
             <p>Email ID</p>
             <input
               class="w-full p-4 shadow-md rounded-2xl"
-              type="text"
+              type="email"
               name=""
               id=""
               placeholder="Enter your email id"
             />
 
-            <button class="btn bg-[#1DD100] w-full">Next</button>
+            <button
+              disabled
+              id="next-btn"
+              class="btn bg-[#1DD100] w-full"
+              onclick="my_modal_5.showModal()"
+            >
+              Next
+            </button>
             <div class="flex justify-between">
               <a class="underline" href="">Terms and Conditions</a>
               <a class="underline" href="">Cancellation Policy</a>
@@ -451,6 +458,33 @@
         </div>
       </div>
     </section>
+    <!-- Open the modal using ID.showModal() method -->
+    <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div class="flex flex-col justify-between items-center gap-4">
+          <img src="images/success.png" alt="" />
+          <h3 class="font-bold text-lg">SUCCESS</h3>
+        </div>
+        <div class="flex flex-col items-center justify-between text-center">
+          <p class="py-4">
+            Thank you for Booking Our Bus Seats. We are working hard to find the
+            best service and deals for you.
+          </p>
+          <p class="py-4">
+            Shortly you will find a confirmation in your email.
+          </p>
+        </div>
+        <div class="modal-action flex justify-center items-center ">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            
+              <button id="reload" class="btn bg-[#27AE60] text-white ">Continue</button>
+            
+          </form>
+        </div>
+      </div>
+    </dialog>
   </body>
   <script src="code.js/code.js"></script>
 </html>
