--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             Yes, you can run unit tests and view the results directly within the
             app. The integrated testing features allow for a streamlined .
           </p>
-          <button onclick="goToTicketSection()"
+          <button
+            onclick="goToTicketSection()"
             class="btn text-black font-bold bg-[#1dd100] raleway border-none"
           >
             Buy Tickets
@@ -276,33 +277,46 @@
           <img class="h-full" src="images/info-devider.png" alt="" />
         </div>
         <div
-          class="flex flex-col justify-center items-center w-full md:w-[30%] lg:w-[30%]"
+          class="flex flex-col justify-center items-center w-full md:w-[30%] lg:w-[30%] gap-5"
         >
-          <h1><img src="images/fare.png" alt="" /></h1>
-          <h1>550 Taka</h1>
-          <h4>Per Seat</h4>
+          <h1>
+            <img class="h-40 object-contain" src="images/fare.png" alt="" />
+          </h1>
+          <h1 class="text-4xl font-bold raleway">550 Taka</h1>
+          <h4 class="font-[#03071250] raleway text-2xl font-semibold">
+            Per Seat
+          </h4>
         </div>
       </div>
       <!-- seat info -->
-      <div id="go-to-seat"
+      <div
+        id="go-to-seat"
         class="container mx-auto mt-10 bg-[#ffff] flex flex-col lg:flex-row md:flex-row gap-10 p-10 rounded-3xl"
       >
         <div
           class="lg: w-[70%] w-full md:w-[70%] pr-16 md:border-r-4 lg:border-r-4 border-dotted"
         >
           <div>
-            <h1>Select Your Seat</h1>
-            <div class="flex justify-between">
+            <h1
+              class="raleway text-2xl font-semibold border-b-4 border-dotted py-4"
+            >
+              Select Your Seat
+            </h1>
+            <div
+              class="flex justify-between flex-col md: flex-row lg:flex-row py-4 border-b-4 border-dotted"
+            >
               <div class="flex">
                 <img src="images/seat-gray.png" alt="" />
-                <p>Available</p>
+                <p class="text-[#03071250]">Available</p>
               </div>
               <div class="flex">
                 <img src="images/seat-green-filled.png" alt="" />
-                <p>Selected</p>
+                <p class="text-[#1DD100]">Selected</p>
               </div>
             </div>
-            <p><img src="images/Vector.png" alt="" /></p>
+            <div class="flex py-8 justify-end">
+              <p class="btn"><img src="images/Vector.png" alt="" /></p>
+            </div>
           </div>
           <div class="flex gap-10 space-x-14 justify-between">
             <div class="grid grid-cols-3 gap-10">
@@ -362,7 +376,11 @@
           </div>
         </div>
         <div class="lg:w-[50%] md:w-[50%] w-full">
-          <h1>Select Your Seat</h1>
+          <h1
+            class="raleway text-2xl font-semibold border-b-4 border-dotted py-4 mb-5"
+          >
+            Ticket Details
+          </h1>
 
           <!-- table -->
           <div class="bg-[#F7F8F8] w-full p-6 rounded-3xl">
@@ -475,16 +493,51 @@
             Shortly you will find a confirmation in your email.
           </p>
         </div>
-        <div class="modal-action flex justify-center items-center ">
+        <div class="modal-action flex justify-center items-center">
           <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
-            
-              <button id="reload" class="btn bg-[#27AE60] text-white ">Continue</button>
-            
+
+            <button id="reload" class="btn bg-[#27AE60] text-white">
+              Continue
+            </button>
           </form>
         </div>
       </div>
     </dialog>
+    <footer class="bg-[#030712]">
+      <div
+        class="container mx-auto flex justify-between p-10 border-b-2 border-dotted flex-col md:flex-row lg:flex-row"
+      >
+        <div class="space-y-4">
+          <h1 class="raleway text-white text-3xl font-bold">RR-Ticket</h1>
+          <p class="inter text-white font-extralight">
+            RR-Ticket is a digital platform to make your daily commuting better.
+          </p>
+        </div>
+        <div class="flex justify-center items-center gap-5 flex-col">
+          <h1 class="raleway text-lg font-semibold text-white">
+            Download our app
+          </h1>
+          <div class="flex justify-between items-center gap-5">
+            <div><img src="images/playstore.png" alt="" /></div>
+            <div>
+              <h1 class="font-light text-white text-lg">GET IT ON</h1>
+              <h1 class="text-white font-bold text-3xl">Google Play</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container mx-auto flex justify-between py-10 pb-28">
+        <div class="text-white font-light ">
+          <p>@all rights reserved, P-Ticket services limited.2024</p>
+        </div>
+        <div class="flex text-white font-light justify-between gap-10">
+          <a href="">Terms & condition</a>
+          <a href="">Return & refund policy</a>
+          <a href="">Privacy policy</a>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="code.js/code.js"></script>
 </html>
