--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
       </div>
       <div class="container mx-auto flex justify-between py-10 pb-28">
         <div class="text-white font-light ">
-          <p>@all rights reserved, P-Ticket services limited.2024</p>
+          <p>@all rights reserved, RR-Ticket services limited.2024</p>
         </div>
         <div class="flex text-white font-light justify-between gap-10">
           <a href="">Terms & condition</a>
