--- a/index.html
+++ b/index.html
@@ -506,9 +506,9 @@
     </dialog>
     <footer class="bg-[#030712]">
       <div
-        class="container mx-auto flex justify-between p-10 border-b-2 border-dotted flex-col md:flex-row lg:flex-row"
+        class="container mx-auto flex justify-between p-10 border-b-2 border-dotted flex-col md:flex-row lg:flex-row gap-4"
       >
-        <div class="space-y-4">
+        <div class="space-y-4 text-center lg:text-start md:text-start">
           <h1 class="raleway text-white text-3xl font-bold">RR-Ticket</h1>
           <p class="inter text-white font-extralight">
             RR-Ticket is a digital platform to make your daily commuting better.
@@ -527,11 +527,11 @@
           </div>
         </div>
       </div>
-      <div class="container mx-auto flex justify-between py-10 pb-28">
+      <div class="container mx-auto flex justify-between py-10 pb-28 flex-col md:flex-row lg:flex-row gap-4">
         <div class="text-white font-light ">
-          <p>@all rights reserved, RR-Ticket services limited.2024</p>
+          <p class="text-center">@all rights reserved, RR-Ticket services limited.2024</p>
         </div>
-        <div class="flex text-white font-light justify-between gap-10">
+        <div class="flex text-white font-light justify-between gap-10 flex-col md:flex-row lg:flex-row items-center">
           <a href="">Terms & condition</a>
           <a href="">Return & refund policy</a>
           <a href="">Privacy policy</a>
